@@ -1369,7 +1369,12 @@ sub run_swish {
     # add in the default prop - a number must be first (this might be a duplicate in -x, oh well)
     @properties = ( 'swishreccount', @properties );
 
-    $self->swish_command( -x => join( '\t', map { "<$_>" } @properties ) . '\n' );
+    my @props = map {
+        $_ eq 'swishlastmodified' ? "$_ fmt='%Y-%m-%d'" : $_
+    } @properties;
+
+    $self->swish_command( -x => join( '\t', map { "<$_>" } @props ) . '\n' );
+
     $self->swish_command( -H => 9 );
 
     my $fh = $^O =~ /Win32/i
